--- a/.env.sample
+++ b/.env.sample
@@ -10,7 +10,7 @@ NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
 NEXT_PUBLIC_CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 
-MONGODB_URI=
+MONGODB_URI=mongodb://localhost:27017/E-Shopify-Admin
 
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 STRIPE_SECRET_KEY=
